Fix: project structure + main.fxml + stylesheet path